name:                hangman
version:             0.1.0.0
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
synopsis:            Playing Hangman
license-file:        LICENSE
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

library
  exposed-modules:  Hangman
  ghc-options:      -Wall -Werror
  hs-source-dirs:   src
  build-depends:    base >=4.7 && <5
                  , random
                  , split
  default-language: Haskell2010

executable hangman
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, hangman

test-suite tests
  ghc-options: -Wall -fno-warn-orphans
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      tests
  build-depends:
      base
    , containers
    , hangman
    , QuickCheck
    , hspec
  default-language: Haskell2010
