name:               exercises
version:            0.1.0.0
author:             Joan Xie
category:           Web
build-type:         Simple
cabal-version:      >=1.10

test-suite tests
  main-is:          Main.hs
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -fwarn-tabs
  hs-source-dirs:   .
  build-depends:    base >=4.7 && <5
                  , hspec
                  , QuickCheck
  default-language: Haskell2010
