name:                Exercises
version:             0.1.0.0
author:              Joan Xie
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Exercises
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.10 && < 5, hspec, QuickCheck
  hs-source-dirs:      .
  default-language:    Haskell2010
